[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stima_scraper"
version = "1.0.3"
authors = [
  { name="Daniel CHege Nduati", email="dannduati2@gmail.com" },
]
description = "A simple kplc pdf scraper"
readme = "README.md"
license = { file="LICENSE" }


classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["kplc", "stima", "stimascraper"]
dependencies = [
    "requests",
    "beautifulsoup4 >= 4.11.1",
]
requires-python = ">=3.7"

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

[project.urls]
"Homepage" = "https://github.com/DanNduati/Stima_scraper"
"Bug Tracker" = "https://github.com/DanNduati/Stima_scraper"


[tool.bumpver]
current_version = "1.0.3"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"','version = "{version}"'
]
"src/stimascraper/__about__.py" = ["{version}"]
